2007-09-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-cvs.el (vc-cvs-annotate-time): Use inhibit-read-only and
	inhibit-modification-hooks.

	* calendar/cal-bahai.el (mark-bahai-diary-entries): Fix up typo.
	(calendar-bahai-print-date, calendar-bahai-goto-date)
	(diary-bahai-list-entries, diary-bahai-insert-entry):
	New names to clean up the namespace a bit more.
	(calendar-goto-bahai-date, calendar-print-bahai-date): Compat aliases.

2007-09-15  Glenn Morris  <rgm@gnu.org>

	* calendar/holidays.el (holiday-list): Rename it back to
	`list-holidays', but leave `holiday-list' as an alias.

	* textmodes/bibtex-style.el (bibtex-style-indent-basic): Specify a
	custom group.

	* textmodes/css-mode.el (css): New custom group.
	(css-electrick-keys, css-selector, css-property)
	(css-indent-offset): Specify custom group.

2007-09-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs.el (cvs-tags-list, cvs-retrieve-revision, cvs-find-modif)
	(cvs-execute-single-file): Use process-file.
	(cvs-run-process): Use start-file-process.

2007-09-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* xt-mouse.el (xterm-mouse-mode): Add hooks here not at the top
	level.  Remove the hooks when turning off the mode.

	* term/xterm.el: Require xt-mouse at compile time.
	(terminal-init-xterm): Turn on xterm mouse tracking for this
	terminal if xterm-mouse-mode is enabled.

2007-09-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (xterm-function-map): Replace bindings that were
	deleted by the merge.

2007-09-14  Ulf Jasper  <ulf.jasper@web.de>

	* play/bubbles.el (bubbles-version): Bump value to "0.5".
	(bubbles-mode-map): Move define-key statements here.
	(bubbles-game-theme-menu): Ditto.
	(bubbles-graphics-theme-menu): Ditto.
	(bubbles-menu): Ditto.
	(bubbles-mode): Initialize buffer-undo-list, redisplay.
	(bubbles--initialize): Reset buffer-undo-list, redisplay.
	(bubbles-plop): Set buffer-undo-list, redisplay.
	(bubbles-undo): Reset buffer-undo-list, redisplay.